Prevent footer menu entries from overflowing

--- a/resources/stylesheets/layout/_footer.scss
+++ b/resources/stylesheets/layout/_footer.scss
@@ -38,6 +38,8 @@
   display: block;
 
   flex-basis: 25%;
+
+  overflow: hidden;
 }
 
 .main-footer__menu-list {
